--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -1,22 +1,22 @@
 @font-face {
-  font-family: 'Europa';
-  src: url('/fonts/europa-regular-webfont.ttf') format('truetype');
+  font-family: "Europa";
+  src: url("/fonts/europa-regular-webfont.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Europa';
-  src: url('/fonts/europa-bold-webfont.ttf') format('truetype');
+  font-family: "Europa";
+  src: url("/fonts/europa-bold-webfont.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Europa';
-  src: url('/fonts/europa-light-webfont.ttf') format('truetype');
+  font-family: "Europa";
+  src: url("/fonts/europa-light-webfont.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -33,7 +33,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Europa';
+  font-family: "Europa";
 }
 
 @layer base {
@@ -63,7 +63,7 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --primary-1: 0 0% 0%;      /* #000000 */
+    --primary-1: 0 0% 0%; /* #000000 */
     --primary-2: 171 100% 50%; /* #00FFD9 */
   }
   .dark {
@@ -73,7 +73,7 @@ body {
     --card-foreground: 0 0% 98%;
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 82% 49%; 
+    --primary: 0 82% 49%;
     --primary-foreground: 240 5.9% 10%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
@@ -91,7 +91,7 @@ body {
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-    --primary-1: 0 0% 0%;      /* #000000 */
+    --primary-1: 0 0% 0%; /* #000000 */
     --primary-2: 171 100% 50%; /* #00FFD9 */
   }
 }
@@ -113,12 +113,14 @@ body {
   @font-face {
     font-family: "Noto Color Emoji";
     src: local("Noto Color Emoji"),
-         url('https://cdn.jsdelivr.net/npm/@fontsource/noto-color-emoji@latest/files/noto-color-emoji-normal.woff2') format('woff2');
+      url("https://cdn.jsdelivr.net/npm/@fontsource/noto-color-emoji@latest/files/noto-color-emoji-normal.woff2")
+        format("woff2");
     unicode-range: U+1F1E6-1F1FF, U+1F300-1F9FF;
   }
 
   .emoji {
-    font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", sans-serif;
+    font-family: "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji",
+      sans-serif;
   }
 }
 
@@ -180,7 +182,9 @@ body {
   }
 }
 
-
+.bg-hrconsultingcover {
+  background-image: url("/images/hrconsultingcover.jpg"); /* Make sure it's in the public folder */
+}
 
 @layer base {
   * {
@@ -190,5 +194,3 @@ body {
     @apply bg-background text-foreground;
   }
 }
-
-
