card 3 pages completed

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -186,6 +186,14 @@ body {
   background-image: url("/images/hrconsultingcover.jpg"); /* Make sure it's in the public folder */
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
